# a-star-turtlebot

./: README.md
Phase3/: astar-turtlebot.py  readme.txt
Phase4/: readMe.txt
Phase4/ros_ws/src/pathtracer/: CMakeLists.txt  package.xml  waypoints.txt  waypoints1.txt
Phase4/ros_ws/src/pathtracer/data/includes/: Turtlebot_Kinect.launch.xml  Turtlebot_Kinect_Lidar.launch.xml  movebase_gmapping.launch.xml
Phase4/ros_ws/src/pathtracer/data/includes/rvizConfig/: Mapper.rviz
Phase4/ros_ws/src/pathtracer/data/includes/urdf/: Turtlebot_Kinect_Lidar.urdf.xacro  kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro  kobuki_hexagons_kinect.urdf.xacro
Phase4/ros_ws/src/pathtracer/data/maps/: map.pgm  map.yaml
Phase4/ros_ws/src/pathtracer/data/param/: costmap_common_params.yaml  move_base_params.yaml
Phase4/ros_ws/src/pathtracer/include/: collector.hpp
Phase4/ros_ws/src/pathtracer/launch/: Collecting.launch  trace.launch
Phase4/ros_ws/src/pathtracer/src/: collector.cpp
